# openwakeword-trainer-windows

./: .gitignore  README.md  pyproject.toml
configs/: example.yaml  here_kitty_kitty.yaml
openwakeword-inferencer/: pyproject.toml
openwakeword-inferencer/openwakeword_inferencer/: audio_features.py  common.py  downloader.py  model.py  resource.py  vad.py
openwakeword-trainer/: README.md  pyproject.toml
openwakeword-trainer/openwakeword_trainer/data_manager/data_specs/: __init__.py  wav_data.py
openwakeword-trainer/openwakeword_trainer/data_manager/resources/: feature_resource.py  resource.py
openwakeword-trainer/openwakeword_trainer/openwakeword/: network.py
openwakeword_trainer/: __main__.py  recorder.py  runner.py
openwakeword_trainer/data_manager/: data_manager.py
openwakeword_trainer/data_manager/data_specs/: recording_data.py
openwakeword_trainer/data_manager/resources/: model_resource.py
openwakeword_trainer/openwakeword/: audio_features.py  common.py  custom_verifier_model.py  mmap_dataset.py  model.py  vad.py
openwakeword_trainer_windows/: __main__.py  config.py  data_manager.py  logger.py  pipeline_step.py  recorder.py  runner.py  train_model.py  tts.py  util.py
openwakeword_trainer_windows/data_manager/: data_manager.py
openwakeword_trainer_windows/data_manager/data_specs/: __init__.py  data_spec.py  feature_data.py  model_data.py  output_data.py  training_data.py  tts_data.py
openwakeword_trainer_windows/data_manager/resources/: __init__.py  model_resource.py  wav_resources.py
openwakeword_trainer_windows/openwakeword/: __init__.py  audio_features.py  augmenter.py  trainer.py  vad.py
openwakeword_trainer_windows/resources/: __init__.py  feature_resource.py  git_resource.py  model_resource.py  wav_resources.py
